# Columbina

./: .dockerignore  .env.example  .flake8  .gitignore  CHATBOT_PROMPT.txt  Dockerfile  Makefile  SUMMARY_PROMPT.txt  banner.txt  commands.yaml  config.yaml  docker-compose.yaml  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt
.github/workflows/: bump.yml  cd.yml  ci.yml
.husky/: pre-commit  run-lint-format.sh
scripts/: bump.py
src/: main.py
src/classes/: Client.py
src/commands/fun/: namecard.py
src/commands/misc/: summarize.py
src/commands/slash/: about.py  avatar.py  banner.py  help.py  ping.py  role.py  setup.py
src/commands/temp/: welcome.py
src/commands/utility/: about.py  avatar.py  banner.py  emoji.py  help.py  ping.py
src/configs/: commands.py  config.py  env.py
src/events/: on_guild_join.py  on_guild_remove.py  on_member_join.py  on_message.py  on_ready.py
src/models/: server_model.py
src/services/: cache_service.py  database_service.py  memory_service.py
src/utils/: chat.py  database.py  loader.py  logger.py  logging.py  namecard.py  summarize.py  welcome_card.py
src/utils/functions/: redis_type_conversions.py
store/: namecards.json
