[project]
name = "columbina"
version = "1.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [ "black>=25.1.0", "flake8>=7.3.0", "isort>=6.0.1", "openai>=1.101.0", "pillow>=11.3.0", "py-cord>=2.6.1", "python-dotenv>=1.1.1", "pyyaml>=6.0.2",]

[dependency-groups]
dev = [ "watchdog>=6.0.0",]
