[project]
name = "columbina"
version = "1.4.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [ "black>=25.1.0", "flake8>=7.3.0", "isort>=6.0.1", "openai>=1.101.0", "pillow>=11.3.0", "py-cord", "python-dotenv>=1.1.1", "pyyaml>=6.0.2", "sqlmodel>=0.0.24", "psycopg2-binary>=2.9.0",]

[dependency-groups]
dev = [ "watchdog>=6.0.0",]

[tool.uv.sources.py-cord]
git = "https://github.com/Pycord-Development/pycord.git"
rev = "v2.7.x"
